# hermes-agent-cluster-plugin

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  install.sh  plugin.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
dashboard/: manifest.json  plugin_api.py
hermes_cluster/: __init__.py
hermes_cluster/core/: __init__.py  cluster_core.py  recovery.py  watchdog.py
hermes_cluster/models/: __init__.py
hermes_cluster/state/: __init__.py  cluster_store.py
tests/: test_cluster_core.py  test_cluster_store.py  test_dropin_replacement.py  test_plugin_api.py  test_tools.py
